# ir2324_group_34

./: README.md
group34_pkg1/: CmakeLists.txt  README.md  package.xml
group34_pkg1/action/: Navigate.action
group34_pkg1/launch/: navigate.launch
group34_pkg1/src/: cilinder_finder.cpp  cilinder_finder.h  navigate_client.cpp  navigate_server.cpp
group34_pkg2/: CMakeLists.txt  README.md  package.xml
group34_pkg2/action/: PickPlace.action  ReadTags.action
group34_pkg2/launch/: pkg2.launch
group34_pkg2/src/: collision_objects.cpp  collision_objects.h  node_A.cpp  pick_place_client.cpp  pick_place_server.cpp  read_tags_server.cpp
group34_pkg2/srv/: Objs.srv
